--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -117,12 +117,21 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-                <li sec:authorize="isAuthenticated()"><a href="/resv_list">Reservations</a></li>
-                <li class="dropdown" sec:authorize="hasAuthority('ADMIN')">
-
+                <li class="dropdown" sec:authorize="isAuthenticated()" >
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                       role="button" aria-haspopup="true" aria-expanded="false">Administration <span
-                            class="caret"></span></a>
+                       role="button" aria-haspopup="true" aria-expanded="false">
+                        Reservations<span class="caret"></span></a>
+
+                    <ul class="dropdown-menu">
+                        <li><a href="/resv_list">List</a></li>
+                        <li><a href="/resv_new">New</a></li>
+                    </ul>
+                </li>
+
+                <li class="dropdown" sec:authorize="hasAuthority('ADMIN')">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                       role="button" aria-haspopup="true" aria-expanded="false">Administration
+                        <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/admin/user_list">User List</a></li>
                         <li><a href="/admin/user_add">Add a user</a></li>
