checkpoint: all the way to saving a connection request

--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -124,7 +124,7 @@
 
                     <ul class="dropdown-menu">
                         <li><a href="/resv_list">List</a></li>
-                        <li><a href="/resv_new">New</a></li>
+                        <li><a href="/resv_basic_new">New (basic)</a></li>
                     </ul>
                 </li>
 
