--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -11,89 +11,29 @@
     <title th:text="${pageTitle}">Page title</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <link th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <link th:src="@{/webjars/x-editable-bootstrap/1.5.1/css/bootstrap-editable.css}" rel="stylesheet" />
+    <link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"/>
 
-    <script th:src="@{/webjars/x-editable-bootstrap/1.5.1/js/bootstrap-editable.min.js}"></script>
+    <link th:src="@{/webjars/x-editable-bootstrap/1.5.1/css/bootstrap-editable.css}" rel="stylesheet"/>
 
-    <script th:src="@{/webjars/jquery/1.12.0/jquery.min.js}"></script>
+    <script th:src="@{/webjars/jquery/1.12.4/jquery.min.js}" type="text/javascript"></script>
 
-    <script th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}" type="text/javascript"></script>
 
-    <script th:src="@{/webjars/typeahead.js/0.11.1/dist/typeahead.bundle.min.js}"></script>
-    <style>
+    <script th:src="@{/webjars/x-editable-bootstrap/1.5.1/js/bootstrap-editable.min.js}"
+            type="text/javascript"></script>
 
-        .typeahead,
-        .tt-query,
-        .tt-hint {
-            width: 396px;
-            height: 30px;
-            padding: 8px 12px;
-            font-size: 16px;
-            line-height: 30px;
-            border: 2px solid #ccc;
-            -webkit-border-radius: 8px;
-            -moz-border-radius: 8px;
-            border-radius: 8px;
-            outline: none;
-        }
+    <script th:src="@{/webjars/typeahead.js/0.11.1/dist/typeahead.bundle.min.js}" type="text/javascript"></script>
 
-        .typeahead {
-            background-color: #fff;
-        }
+    <link href="/st/my.css" rel="stylesheet"/>
 
-        .typeahead:focus {
-            border: 2px solid #0097cf;
-        }
+</head>
+<head th:fragment="vizFragment">
+    <link href="/st/vis/vis.css" rel="stylesheet" type="text/css" media="screen"/>
 
-        .tt-query {
-            -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-            -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-        }
+    <script src="/st/vis/vis.js" type="text/javascript"></script>
 
-        .tt-hint {
-            color: #999
-        }
-
-        .tt-menu {
-            width: 422px;
-            margin: 12px 0;
-            padding: 8px 0;
-            background-color: #fff;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            -webkit-border-radius: 8px;
-            -moz-border-radius: 8px;
-            border-radius: 8px;
-            -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-            -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-            box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-        }
-
-        .tt-suggestion {
-            padding: 3px 20px;
-            font-size: 18px;
-            line-height: 24px;
-        }
-
-        .tt-suggestion:hover {
-            cursor: pointer;
-            color: #fff;
-            background-color: #0097cf;
-        }
-
-        .tt-suggestion.tt-cursor {
-            color: #fff;
-            background-color: #0097cf;
-
-        }
-
-        .tt-suggestion p {
-            margin: 0;
-        }
-
-    </style>
+    <script src="/st/my.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -117,7 +57,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-                <li class="dropdown" sec:authorize="isAuthenticated()" >
+                <li class="dropdown" sec:authorize="isAuthenticated()">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false">
                         Reservations<span class="caret"></span></a>
