couple viz things

--- a/webui/src/main/resources/templates/viz.html
+++ b/webui/src/main/resources/templates/viz.html
@@ -12,7 +12,12 @@
 
 <div id="network_viz"></div>
 
+<form class="form-inline" id="add_to_resv_form">
+    <button type="submit" class="btn btn-primary">Add to request</button>
+</form>
+
 <div id="reservation_viz"></div>
+
 
 </body>
 </html>
