--- a/webui/src/main/resources/templates/viz.html
+++ b/webui/src/main/resources/templates/viz.html
@@ -18,6 +18,14 @@
 
 <div id="reservation_viz"></div>
 
+<div id="resv_edge_params_form">
+<p>I am the edge parameters form!</p>
+</div>
+
+<div id="resv_node_params_form">
+    <p>I am the node parameters form!</p>
+</div>
+
 
 </body>
 </html>
