--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -34,6 +34,7 @@
     <script src="/st/vis/vis.js" type="text/javascript"></script>
 
     <script src="/st/my.js" type="text/javascript"></script>
+    <script src="/st/resv.js" type="text/javascript"></script>
 </head>
 
 <body>
