--- a/webui/src/main/resources/templates/viz.html
+++ b/webui/src/main/resources/templates/viz.html
@@ -10,20 +10,46 @@
 <body>
 <div th:include="shared :: navbar"></div>
 
-<div id="network_viz"></div>
+<div id="network_viz" class="container"></div>
 
-<form class="form-inline" id="add_to_resv_form">
-    <button type="submit" class="btn btn-primary">Add to request</button>
-</form>
-
-<div id="reservation_viz"></div>
-
-<div id="resv_edge_params_form">
-<p>I am the edge parameters form!</p>
+<div class="container">
+    <form class="form-inline" id="add_node_to_resv_form">
+        <button type="submit" class="btn btn-primary">Add to request</button>
+    </form>
 </div>
 
-<div id="resv_node_params_form">
-    <p>I am the node parameters form!</p>
+<div id="reservation_viz" class="container"></div>
+
+<div id="resv_edge_params_form" class="container">
+    <h2>Pipe parameters</h2>
+    <form class="form-inline" id="resv_edge_form">
+        <table class="table table-striped table-bordered table-hover">
+            <thead>
+            <td>Bandwidth</td>
+            </thead>
+            <tbody>
+            <td><input name='edgebw' type='text' placeholder='1G' class='form-control input-md'  /></td>
+            </tbody>
+        </table>
+    </form>
+</div>
+
+<div id="resv_node_params_form" class="container">
+    <h2>Junction parameters</h2>
+    <form class="form-inline" id="resv_node_port_form">
+
+        <table id="resv_node_table" class="table table-striped table-bordered table-hover">
+            <thead>
+                <td>#</td>
+                <td>URN</td>
+                <td>Bandwidth</td>
+                <td>VLAN</td>
+                <td>Use</td>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </form>
 </div>
 
 
