add esnet topology (basic) & make it thedefault on startup (for now).  prettier. positions.

--- a/webui/src/main/resources/templates/viz.html
+++ b/webui/src/main/resources/templates/viz.html
@@ -108,5 +108,21 @@
 
 </div>
 
+
+<div class="panel-group hidden">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" href="#positions_display">Show / hide positions dump</a>
+            </h4>
+        </div>
+        <div>
+            <button type="submit" id="dump_positions_btn" class="btn btn-primary">Dump positions</button>
+            <button type="submit" id="save_positions_btn" class="btn btn-primary">Save positions</button>
+        </div>
+        <div id="positions_display" class="panel-body collapse"></div>
+    </div>
+</div>
+
 </body>
 </html>
