--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -15,17 +15,20 @@
     <link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"/>
 
     <link th:src="@{/webjars/x-editable-bootstrap/1.5.1/css/bootstrap-editable.css}" rel="stylesheet"/>
+    <link href="/st/dtp/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
 
     <script th:src="@{/webjars/jquery/1.12.4/jquery.min.js}" type="text/javascript"></script>
 
     <script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}" type="text/javascript"></script>
 
-
-
     <script th:src="@{/webjars/x-editable-bootstrap/1.5.1/js/bootstrap-editable.min.js}"
             type="text/javascript"></script>
 
     <script th:src="@{/webjars/typeahead.js/0.11.1/dist/typeahead.bundle.min.js}" type="text/javascript"></script>
+
+    <script src="/st/dtp/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+
+    <script src="/st/moment.js" type="text/javascript"></script>
 
     <link href="/st/my.css" rel="stylesheet"/>
 
