--- a/webui/src/main/resources/templates/resv_gui.html
+++ b/webui/src/main/resources/templates/resv_gui.html
@@ -45,10 +45,14 @@
             <form class="form-inline" id="pipe_form">
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
+                    <td>A</td>
                     <td>Bandwidth</td>
+                    <td>Z</td>
                     </thead>
                     <tbody>
+                    <td><input id="pipe_a" type='text' readonly="true" class='form-control input-md'/></td>
                     <td><input id='pipe_bw' type='text' placeholder='1G' class='form-control input-md'/></td>
+                    <td><input id="pipe_z" type='text' readonly="true" class='form-control input-md'/></td>
                     </tbody>
                 </table>
             </form>
@@ -91,8 +95,8 @@
 
                 <div class="form-group">
                     <label class="col-md-3 control-label" for="start_at">Start at</label>
-                    <div class='col-md-3 input-group date' id='start_at'>
-                        <input type='text' class="form-control"/>
+                    <div class='col-md-3 input-group' id="start_at_dtp">
+                        <input type='text' id='start_at' class="form-control"/>
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar"></span>
                         </span>
@@ -101,8 +105,8 @@
 
                 <div class="form-group">
                     <label class="col-md-3 control-label" for="end_at">End at</label>
-                    <div class='col-md-3 input-group date' id='end_at'>
-                        <input type='text' class="form-control"/>
+                    <div class='col-md-3 input-group' id="end_at_dtp">
+                        <input type='text' id='end_at' class="form-control"/>
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar"></span>
                         </span>
@@ -150,7 +154,6 @@
 
 
     $("#start_at").datetimepicker({
-        format: "dd MM yyyy - hh:ii",
         autoclose: true,
         todayBtn: true,
         minDate: start,
@@ -160,7 +163,6 @@
     });
 
     $("#end_at").datetimepicker({
-        format: "dd MM yyyy - hh:ii",
         autoclose: true,
         todayBtn: true,
         minDate: start,
@@ -168,6 +170,8 @@
         setDate: end,
         minuteStep: 10
     });
+    $("#start_at").datetimepicker("update", new Date());
+    $("#end_at").datetimepicker("update", new Date());
 </script>
 
 
