--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -36,9 +36,9 @@
 
 </head>
 <head th:fragment="vizFragment">
-    <link href="/st/vis/vis.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
 
-    <script src="/st/vis/vis.js" type="text/javascript"></script>
+    <script src="/st/vis/vis.min.js" type="text/javascript"></script>
 
     <script src="/st/my.js" type="text/javascript"></script>
     <script src="/st/resv.js" type="text/javascript"></script>
