frontend fixes; can submit a reservation all the way to hold then commit

--- a/webui/src/main/resources/templates/resv_gui.html
+++ b/webui/src/main/resources/templates/resv_gui.html
@@ -112,18 +112,12 @@
                         </span>
                     </div>
                 </div>
-
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="resv_submit_btn">Controls</label>
-                    <div class="col-md-6">
-                        <button id="resv_submit_btn" type="submit" class="btn btn-success">Submit</button>
-                        <button type="reset" class="btn btn-inverse">Reset</button>
-                    </div>
+                <div class="col-md-6">
+                    <a href="#" id="resv_hold_btn" class="btn btn-primary disabled">Hold</a>
+                    <a href="#" id="resv_commit_btn" class="btn btn-success disabled">Commit</a>
                 </div>
-
-
             </form>
+
         </div>
     </div>
 
