--- a/webui/src/main/resources/templates/resv_view.html
+++ b/webui/src/main/resources/templates/resv_view.html
@@ -4,11 +4,26 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head th:include="shared :: headerFragment (pageTitle='View reservation')"/>
+<head th:include="shared :: resvViewFragment"/>
 
 <body>
 <div th:include="shared :: navbar"></div>
-<pre th:text="${connection}" />
+<div class="panel-group">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" href="#reservation_view_viz">Show / hide reservation</a>
+            </h4>
+        </div>
+        <div id="reservation_view_viz" class="panel-body collapse  collapse in"></div>
+    </div>
 
+</div>
+
+<script type="text/javascript" th:inline="javascript">
+    var connectionId = /*[[${connectionId}]]*/ 'connectionId';
+    console.log("connection id: "+connectionId);
+</script>
 
 </body>
 </html>
