--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -27,22 +27,32 @@
 
     <script th:src="@{/webjars/typeahead.js/0.11.1/dist/typeahead.bundle.min.js}" type="text/javascript"></script>
 
+    <link href="/st/my.css" rel="stylesheet"/>
+
+</head>
+<head th:fragment="vizFragment">
     <script src="/st/moment.js" type="text/javascript"></script>
 
     <script src="/st/dtp/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
 
     <link href="/st/dtp/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
-    <link href="/st/my.css" rel="stylesheet"/>
 
-</head>
-<head th:fragment="vizFragment">
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
 
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
 
-    <script src="/st/my.js" type="text/javascript"></script>
-    <script src="/st/resv.js" type="text/javascript"></script>
+    <script src="/st/common.js" type="text/javascript"></script>
+    <script src="/st/resv_gui.js" type="text/javascript"></script>
 </head>
+<head th:fragment="resvViewFragment">
+    <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
+
+    <script src="/st/vis/vis.min.js" type="text/javascript"></script>
+
+    <script src="/st/common.js" type="text/javascript"></script>
+    <script src="/st/resv_view.js" type="text/javascript"></script>
+</head>
+
 
 <body>
 
