--- a/webui/src/main/resources/templates/resv_view.html
+++ b/webui/src/main/resources/templates/resv_view.html
@@ -18,6 +18,14 @@
         <div id="reservation_view_viz" class="panel-body collapse  collapse in"></div>
     </div>
 
+    <div id="device_commands_container" class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">Device commands</h4>
+        </div>
+        <div class="panel-body">
+            <pre id="device_commands"></pre>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript" th:inline="javascript">
