--- a/webui/src/main/resources/templates/resv_gui.html
+++ b/webui/src/main/resources/templates/resv_gui.html
@@ -71,7 +71,9 @@
                         <div class="col-md-6">
                             <a href="#" id="resv_hold_btn" class="btn btn-primary disabled">Hold</a>
                             <a href="#" id="resv_commit_btn" class="btn btn-success disabled">Commit</a>
+                            <a href="#" id="resv_precheck_btn" class="btn btn-warning disabled">Precheck</a>
                         </div>
+                        <div id="precheck_box" class="alert"/>
                     </form>
 
                 </div>
