--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -52,6 +52,12 @@
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_view.js" type="text/javascript"></script>
 </head>
+<head th:fragment="resvListFragment">
+    <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
+    <script src="/st/vis/vis.min.js" type="text/javascript"></script>
+    <script src="/st/common.js" type="text/javascript"></script>
+    <script src="/st/resv_list.js" type="text/javascript"></script>
+</head>
 
 
 <body>
@@ -74,7 +80,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/">Reservation List</a></li>
                 <li><a href="/resv/gui">New Reservation</a></li>
                 <li class="dropdown" sec:authorize="isAuthenticated()">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
