What-If Bandwidth-Availability GUI begun. All graph vis features implemented properly, but data is still dummy.

--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -32,23 +32,16 @@
 </head>
 <head th:fragment="vizFragment">
     <script src="/st/moment.js" type="text/javascript"></script>
-
     <script src="/st/dtp/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
-
     <link href="/st/dtp/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
-
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
-
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
-
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_gui.js" type="text/javascript"></script>
 </head>
 <head th:fragment="resvViewFragment">
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
-
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
-
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_view.js" type="text/javascript"></script>
 </head>
@@ -57,6 +50,14 @@
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_list.js" type="text/javascript"></script>
+</head>
+<head th:fragment="timeBwFragment">
+    <link href="/st/vis/vis.css" rel="stylesheet" type="text/css" media="screen"/>
+    <script src="/st/vis/vis.js" type="text/javascript"></script>
+    <link href="/st/vis/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" media="screen"/>
+    <script src="/st/vis/vis-timeline-graph2d.min.js" type="text/javascript"></script>
+    <link href="/st/rangeSlider.css" rel="stylesheet" type="text/css" media="screen"/>
+    <script src="/st/timeBw.js" type="text/javascript"></script>
 </head>
 
 
