What-If UI supports full ERO selection

--- a/webui/src/main/resources/templates/timeBw.html
+++ b/webui/src/main/resources/templates/timeBw.html
@@ -20,7 +20,21 @@
                 </h4>
             </div>
             <div id="network_panel" class="panel-body collapse in">
-                <div id="network_viz" class="col-md-10"></div>
+                <div id="loadingBarDiv" class="loadingBarDiv">
+                    <div class="loadingBarBorder">
+                        <div id="progressVal" class="loadingBarProgress">0%</div>
+                        <div class="loadingBarRunner">
+                            <div id="progressBar" class="loadingBar" />
+                        </div>
+                    </div>
+                    <div class="loadingBarMessage">Loading Network Topology...</div>
+                </div>
+                <div id="networkVisualization" class="col-md-10" width="90%"/>
+                <div>
+                    <div>
+                        <button type="reset" id="buttonCancelERO" class="btn btn-danger disabled" onclick="clearERO()">Clear Path</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -28,7 +42,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#availability_panel">Show / hide bandwidth X time availability</a>
+                    <a data-toggle="collapse" href="#availability_panel">Show / hide Bandwidth x Time availability</a>
                 </h4>
             </div>
             <div id="availability_panel" class="panel-body collapse  collapse in">
@@ -39,12 +53,6 @@
             </div>
         </div>
     </div>
-                <!--<div style="clear:both">
-        <div style="float:left" >
-            <input id = "bwSlider" type="range" class="verticalSlider" orient="vertical" min="0" max="30" value="10" step="1" height="400px" width="5px"/>
-        </div>
-        <div id="bwVisualization"></div>
-    </div>-->
 
 <p>Bandwidth: </p>
 <p id="bandwidth"></p>
