--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -31,33 +31,39 @@
 
 </head>
 <head th:fragment="vizFragment">
-    <script src="/st/moment.js" type="text/javascript"></script>
-    <script src="/st/dtp/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
     <link href="/st/dtp/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
+
+    <script src="/st/moment.js" type="text/javascript"></script>
+    <script src="/st/dtp/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_gui.js" type="text/javascript"></script>
 </head>
 <head th:fragment="resvViewFragment">
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
+
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_view.js" type="text/javascript"></script>
 </head>
 <head th:fragment="resvListFragment">
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
+
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_list.js" type="text/javascript"></script>
 </head>
 <head th:fragment="timeBwFragment">
-    <link href="/st/vis/vis.css" rel="stylesheet" type="text/css" media="screen"/>
-    <script src="/st/vis/vis.js" type="text/javascript"></script>
+    <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
     <link href="/st/vis/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" media="screen"/>
-    <script src="/st/vis/vis-timeline-graph2d.min.js" type="text/javascript"></script>
+    <link href="/st/vis/vis-network.min.css" rel="stylesheet" type="text/css" media="screen"/>
     <link href="/st/rangeSlider.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="/st/loadingBar.css" rel="stylesheet" type="text/css" media="screen"/>
+
+    <script src="/st/vis/vis.min.js" type="text/javascript"></script>
     <script src="/st/timeBw.js" type="text/javascript"></script>
+    <script src="/st/common.js" type="text/javascript"></script>
 </head>
 
 
@@ -83,6 +89,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Reservation List</a></li>
                 <li><a href="/resv/gui">New Reservation</a></li>
+                <li><a href="/resv/timebw">What-If?</a></li>
                 <li class="dropdown" sec:authorize="isAuthenticated()">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                        role="button" aria-haspopup="true" aria-expanded="false">
