--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -49,6 +49,7 @@
 </head>
 <head th:fragment="resvListFragment">
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="/st/loadingBar.css" rel="stylesheet" type="text/css" media="screen"/>
 
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
     <script src="/st/common.js" type="text/javascript"></script>
