Includes support for deep-dive UI connection equality checks.

--- a/webui/src/main/resources/templates/shared.html
+++ b/webui/src/main/resources/templates/shared.html
@@ -54,6 +54,7 @@
     <script src="/st/vis/vis.min.js" type="text/javascript"></script>
     <script src="/st/common.js" type="text/javascript"></script>
     <script src="/st/resv_list.js" type="text/javascript"></script>
+    <script src="/st/connection_helper.js" type="text/javascript"></script>
 </head>
 <head th:fragment="timeBwFragment">
     <link href="/st/vis/vis.min.css" rel="stylesheet" type="text/css" media="screen"/>
